--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    {% include 'header.html' %} <!-- navbar.html is included within header.html -->
+    {% include 'header.html' %}
 
     <div class="container-fluid">
         {% block content %}{% endblock %}
